--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
+  <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -12,6 +12,13 @@
       crossorigin="anonymous"
     ></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Knowder" />
+    <meta property="og:url" content="https://tweet-task.web.app" />
+    <meta
+      property="og:image"
+      content="https://github.com/taiga248/tweet_task/blob/master/public/appIcon.png"
+    />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Knowder" />
     <meta name="twitter:creator" content="@En_358" />
