--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://tweet-task.web.app" />
     <meta
       property="og:image"
-      content="https://github.com/taiga248/tweet_task/blob/master/public/appIcon.png"
+      content="https://raw.githubusercontent.com/taiga248/tweet_task/master/public/appIcon.png"
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Knowder" />
