--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,15 @@
     ></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Knowder" />
+    <meta property="og:title" content="Knowder" />
     <meta property="og:url" content="https://tweet-task.web.app" />
     <meta
-      property="og:image"
+      name="og:image"
       content="https://raw.githubusercontent.com/taiga248/tweet_task/master/public/appIcon.png"
     />
     <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@En_358" />
     <meta name="twitter:title" content="Knowder" />
-    <meta name="twitter:creator" content="@En_358" />
-    <meta
-      name="twitter:image"
-      content="https://github.com/taiga248/tweet_task/blob/master/public/appIcon.png"
-    />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link
       rel="stylesheet"
